Learning Web API

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
   <div class="container">
     <aside class="sidebar-kiri">
-      <button onclick="loadKategori('makanan')">Makanan</button>
-      <button onclick="loadKategori('minuman')">Minuman</button>
-      <button onclick="loadKategori('cemilan')">Cemilan</button>
+      <button onclick="loadKategori('food')">Makanan</button>
+      <button onclick="loadKategori('drink')">Minuman</button>
+      <button onclick="loadKategori('snack')">Cemilan</button>
     </aside>
 
     <main id="produk-container"></main>
